--- a/zillow_housing_final.ipynb
+++ b/zillow_housing_final.ipynb
@@ -16640,10 +16640,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.485Z"
+     "end_time": "2021-04-22T18:25:56.733755Z",
+     "start_time": "2021-04-22T18:19:10.459211Z"
     }
    },
    "outputs": [
@@ -16652,7 +16653,283 @@
      "output_type": "stream",
      "text": [
       "Parameters for SARIMAX grid search...\n",
-      "SARIMAX: (2, 2, 1) x (2, 2, 1, 12)\n"
+      "SARIMAX: (2, 2, 1) x (2, 2, 1, 12)\n",
+      "4511.196602936114\n",
+      "4464.172335669433\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3294.2183177227907\n",
+      "4511.535586558422\n",
+      "4489.042907018444\n",
+      "4514.341680692105\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4518.565873231668\n",
+      "4532.153495922155\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6052.780577493399\n",
+      "4488.848809774401\n",
+      "4572.4608888674775\n",
+      "4535.963835629153\n",
+      "4545.425381345742\n",
+      "4535.7192756599925\n",
+      "4528.477937258111\n",
+      "4538.124154895837\n",
+      "4566.014132479033\n",
+      "4540.533737951946\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4379.041160125071\n",
+      "4663.234803796995\n",
+      "4502.416060159456\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5039.451681700814\n",
+      "4555.391994588235\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4433.853169411539\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1926.701764860846\n",
+      "Parameters for SARIMAX grid search...\n",
+      "SARIMAX: (2, 2, 1) x (2, 2, 1, 12)\n",
+      "4606.37828562333\n",
+      "4604.785407694093\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2410.832118147516\n",
+      "4726.29473203146\n",
+      "4642.441325753233\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4812.931552908118\n",
+      "4647.3938749322415\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5759.485643057702\n",
+      "4791.052466558749\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4582.129437782429\n",
+      "4703.524361323107\n",
+      "4653.51893107572\n",
+      "4566.574821545013\n",
+      "4690.001201450261\n",
+      "4684.591138835995\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4603.166011290259\n",
+      "4550.784853174306\n",
+      "4755.290719215596\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4361.479535362749\n",
+      "4614.86092059852\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4652.67805889515\n",
+      "4542.854478706073\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4706.163910649271\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4332.870346996831\n",
+      "2688.498772380322\n"
      ]
     }
    ],
@@ -16663,10 +16940,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.489Z"
+     "end_time": "2021-04-22T18:25:56.748379Z",
+     "start_time": "2021-04-22T18:25:56.743248Z"
     }
    },
    "outputs": [],
@@ -16690,10 +16968,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.492Z"
+     "end_time": "2021-04-22T18:25:56.756333Z",
+     "start_time": "2021-04-22T18:25:56.753438Z"
     }
    },
    "outputs": [],
@@ -16716,10 +16995,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.496Z"
+     "end_time": "2021-04-22T18:25:56.768768Z",
+     "start_time": "2021-04-22T18:25:56.759845Z"
     }
    },
    "outputs": [],
@@ -16743,10 +17023,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.499Z"
+     "end_time": "2021-04-22T18:25:56.784248Z",
+     "start_time": "2021-04-22T18:25:56.776995Z"
     }
    },
    "outputs": [],
@@ -16762,10 +17043,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.502Z"
+     "end_time": "2021-04-22T18:25:56.794972Z",
+     "start_time": "2021-04-22T18:25:56.791968Z"
     }
    },
    "outputs": [],
@@ -16790,13 +17072,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.506Z"
+     "end_time": "2021-04-22T18:25:56.926282Z",
+     "start_time": "2021-04-22T18:25:56.799366Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             param param_seasonal          aic\n",
+      "zipcode                                       \n",
+      "94102    (2, 2, 1)  (2, 2, 1, 12)  4511.196603\n",
+      "94103    (2, 2, 1)  (2, 2, 1, 12)  4464.172336\n",
+      "94104    (2, 2, 1)  (2, 2, 1, 12)  3294.218318\n",
+      "94105    (2, 2, 1)  (2, 2, 1, 12)  4511.535587\n",
+      "94107    (2, 2, 1)  (2, 2, 1, 12)  4489.042907\n",
+      "94108    (2, 2, 1)  (2, 2, 1, 12)  4514.341681\n",
+      "94109    (2, 2, 1)  (2, 2, 1, 12)  4518.565873\n",
+      "94110    (2, 2, 1)  (2, 2, 1, 12)  4532.153496\n",
+      "94111    (2, 2, 1)  (2, 2, 1, 12)  6052.780577\n",
+      "94112    (2, 2, 1)  (2, 2, 1, 12)  4488.848810\n",
+      "94114    (2, 2, 1)  (2, 2, 1, 12)  4572.460889\n",
+      "94115    (2, 2, 1)  (2, 2, 1, 12)  4535.963836\n",
+      "94116    (2, 2, 1)  (2, 2, 1, 12)  4545.425381\n",
+      "94117    (2, 2, 1)  (2, 2, 1, 12)  4535.719276\n",
+      "94118    (2, 2, 1)  (2, 2, 1, 12)  4528.477937\n",
+      "94121    (2, 2, 1)  (2, 2, 1, 12)  4538.124155\n",
+      "94122    (2, 2, 1)  (2, 2, 1, 12)  4566.014132\n",
+      "94123    (2, 2, 1)  (2, 2, 1, 12)  4540.533738\n",
+      "94124    (2, 2, 1)  (2, 2, 1, 12)  4379.041160\n",
+      "94127    (2, 2, 1)  (2, 2, 1, 12)  4663.234804\n",
+      "94131    (2, 2, 1)  (2, 2, 1, 12)  4502.416060\n",
+      "94132    (2, 2, 1)  (2, 2, 1, 12)  5039.451682\n",
+      "94133    (2, 2, 1)  (2, 2, 1, 12)  4555.391995\n",
+      "94134    (2, 2, 1)  (2, 2, 1, 12)  4433.853169\n",
+      "94158    (2, 2, 1)  (2, 2, 1, 12)  1926.701765\n",
+      "             param param_seasonal          aic\n",
+      "zipcode                                       \n",
+      "94102    (2, 2, 1)  (2, 2, 1, 12)  4606.378286\n",
+      "94103    (2, 2, 1)  (2, 2, 1, 12)  4604.785408\n",
+      "94104    (2, 2, 1)  (2, 2, 1, 12)  2410.832118\n",
+      "94105    (2, 2, 1)  (2, 2, 1, 12)  4726.294732\n",
+      "94107    (2, 2, 1)  (2, 2, 1, 12)  4642.441326\n",
+      "94108    (2, 2, 1)  (2, 2, 1, 12)  4812.931553\n",
+      "94109    (2, 2, 1)  (2, 2, 1, 12)  4647.393875\n",
+      "94110    (2, 2, 1)  (2, 2, 1, 12)  5759.485643\n",
+      "94111    (2, 2, 1)  (2, 2, 1, 12)  4791.052467\n",
+      "94112    (2, 2, 1)  (2, 2, 1, 12)  4582.129438\n",
+      "94114    (2, 2, 1)  (2, 2, 1, 12)  4703.524361\n",
+      "94115    (2, 2, 1)  (2, 2, 1, 12)  4653.518931\n",
+      "94116    (2, 2, 1)  (2, 2, 1, 12)  4566.574822\n",
+      "94117    (2, 2, 1)  (2, 2, 1, 12)  4690.001201\n",
+      "94118    (2, 2, 1)  (2, 2, 1, 12)  4684.591139\n",
+      "94121    (2, 2, 1)  (2, 2, 1, 12)  4603.166011\n",
+      "94122    (2, 2, 1)  (2, 2, 1, 12)  4550.784853\n",
+      "94123    (2, 2, 1)  (2, 2, 1, 12)  4755.290719\n",
+      "94124    (2, 2, 1)  (2, 2, 1, 12)  4361.479535\n",
+      "94127    (2, 2, 1)  (2, 2, 1, 12)  4614.860921\n",
+      "94131    (2, 2, 1)  (2, 2, 1, 12)  4652.678059\n",
+      "94132    (2, 2, 1)  (2, 2, 1, 12)  4542.854479\n",
+      "94133    (2, 2, 1)  (2, 2, 1, 12)  4706.163911\n",
+      "94134    (2, 2, 1)  (2, 2, 1, 12)  4332.870347\n",
+      "94158    (2, 2, 1)  (2, 2, 1, 12)  2688.498772\n"
+     ]
+    }
+   ],
    "source": [
     "sf_1_best_df = get_best_params(zipcodes_1, param_1_list, param_1_seasonal_list, aic_1_list, 1)\n",
     "sf_2_best_df = get_best_params(zipcodes_2, param_2_list, param_2_seasonal_list, aic_2_list, 2)"
@@ -16816,10 +17160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.511Z"
+     "end_time": "2021-04-22T18:25:56.972188Z",
+     "start_time": "2021-04-22T18:25:56.968123Z"
     }
    },
    "outputs": [],
@@ -16849,10 +17194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-04-22T18:18:40.514Z"
+     "end_time": "2021-04-22T18:25:56.982499Z",
+     "start_time": "2021-04-22T18:25:56.978294Z"
     }
    },
    "outputs": [],
@@ -16889,7 +17235,68 @@
      "start_time": "2021-04-22T18:18:40.518Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94102', Timestamp('2019-08-31 00:00:00', freq='M'), 867099.3672749719)\n",
+      "('94103', Timestamp('2019-08-31 00:00:00', freq='M'), 943901.8009570654)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94104', Timestamp('2020-03-31 00:00:00', freq='M'), 930087.6222550559)\n",
+      "('94105', Timestamp('2019-08-31 00:00:00', freq='M'), 934348.8619834763)\n",
+      "('94107', Timestamp('2019-08-31 00:00:00', freq='M'), 968656.774582588)\n",
+      "('94108', Timestamp('2019-08-31 00:00:00', freq='M'), 887084.650843269)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94109', Timestamp('2019-08-31 00:00:00', freq='M'), 926106.9570718174)\n",
+      "('94110', Timestamp('2019-08-31 00:00:00', freq='M'), 1086959.7137037772)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94111', Timestamp('2019-08-31 00:00:00', freq='M'), 426234968226068.06)\n",
+      "('94112', Timestamp('2019-08-31 00:00:00', freq='M'), 1042057.3016780487)\n",
+      "('94114', Timestamp('2019-08-31 00:00:00', freq='M'), 1110632.3875550178)\n",
+      "('94115', Timestamp('2019-08-31 00:00:00', freq='M'), 965406.478163926)\n"
+     ]
+    }
+   ],
    "source": [
     "sf_1_pred_dict = evaluate_model(sf_1_train_dict, sf_1_test_dict, sf_1_best_df)\n",
     "sf_2_pred_dict = evaluate_model(sf_2_train_dict, sf_2_test_dict, sf_2_best_df)"
