--- a/zillow_housing_final.ipynb
+++ b/zillow_housing_final.ipynb
@@ -17293,7 +17293,122 @@
       "('94111', Timestamp('2019-08-31 00:00:00', freq='M'), 426234968226068.06)\n",
       "('94112', Timestamp('2019-08-31 00:00:00', freq='M'), 1042057.3016780487)\n",
       "('94114', Timestamp('2019-08-31 00:00:00', freq='M'), 1110632.3875550178)\n",
-      "('94115', Timestamp('2019-08-31 00:00:00', freq='M'), 965406.478163926)\n"
+      "('94115', Timestamp('2019-08-31 00:00:00', freq='M'), 965406.478163926)\n",
+      "('94116', Timestamp('2019-08-31 00:00:00', freq='M'), 1294873.8925098325)\n",
+      "('94117', Timestamp('2019-08-31 00:00:00', freq='M'), 1011574.4156567722)\n",
+      "('94118', Timestamp('2019-08-31 00:00:00', freq='M'), 948685.0882838741)\n",
+      "('94121', Timestamp('2019-08-31 00:00:00', freq='M'), 1001961.4163515085)\n",
+      "('94122', Timestamp('2019-08-31 00:00:00', freq='M'), 1282866.0146549055)\n",
+      "('94123', Timestamp('2019-08-31 00:00:00', freq='M'), 1066250.7208474476)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94124', Timestamp('2019-08-31 00:00:00', freq='M'), 801307.4005445037)\n",
+      "('94127', Timestamp('2019-08-31 00:00:00', freq='M'), 1532913.454212762)\n",
+      "('94131', Timestamp('2019-08-31 00:00:00', freq='M'), 852189.4484349021)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94132', Timestamp('2019-08-31 00:00:00', freq='M'), 50049905030.48944)\n",
+      "('94133', Timestamp('2019-08-31 00:00:00', freq='M'), 1000421.6384895681)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94134', Timestamp('2019-08-31 00:00:00', freq='M'), 1047110.6308602174)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94158', Timestamp('2020-10-31 00:00:00', freq='M'), 1132769.357424029)\n",
+      "('94102', Timestamp('2020-08-31 00:00:00', freq='M'), 960163.2379534635)\n",
+      "('94103', Timestamp('2020-08-31 00:00:00', freq='M'), 1049098.6757088746)\n",
+      "('94104', Timestamp('2021-03-31 00:00:00', freq='M'), 926951.2039854226)\n",
+      "('94105', Timestamp('2020-08-31 00:00:00', freq='M'), 938969.2001646458)\n",
+      "('94107', Timestamp('2020-08-31 00:00:00', freq='M'), 1034771.6527135789)\n",
+      "('94108', Timestamp('2020-08-31 00:00:00', freq='M'), 927610.9331175381)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94109', Timestamp('2020-08-31 00:00:00', freq='M'), 1008834.7750610781)\n",
+      "('94110', Timestamp('2020-08-31 00:00:00', freq='M'), 1151719.2514928011)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('94111', Timestamp('2020-08-31 00:00:00', freq='M'), 4.331820748029487e+27)\n",
+      "('94112', Timestamp('2020-08-31 00:00:00', freq='M'), 1175875.1346959395)\n",
+      "('94114', Timestamp('2020-08-31 00:00:00', freq='M'), 1198809.561513523)\n",
+      "('94115', Timestamp('2020-08-31 00:00:00', freq='M'), 1019545.5657214773)\n",
+      "('94116', Timestamp('2020-08-31 00:00:00', freq='M'), 1434962.318829128)\n",
+      "('94117', Timestamp('2020-08-31 00:00:00', freq='M'), 1121595.4475014673)\n",
+      "('94118', Timestamp('2020-08-31 00:00:00', freq='M'), 1034442.9448341386)\n",
+      "('94121', Timestamp('2020-08-31 00:00:00', freq='M'), 1086786.0253451457)\n",
+      "('94122', Timestamp('2020-08-31 00:00:00', freq='M'), 1428132.9020146413)\n",
+      "('94123', Timestamp('2020-08-31 00:00:00', freq='M'), 1156751.471574284)\n"
      ]
     }
    ],
