remove icloud files

--- a/zillow_housing_final.ipynb
+++ b/zillow_housing_final.ipynb
@@ -15376,7 +15376,118 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4477.6316235779395\n"
+      "4477.6316235779395\n",
+      "4142.85377376289\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4144.399518175948\n",
+      "4188.78137462114\n",
+      "4167.150277873026\n",
+      "4154.235139265515\n",
+      "4109.210446718981\n",
+      "4181.806412046451\n",
+      "4179.759509737587\n",
+      "4134.04845567825\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4135.670970606202\n",
+      "4201.2934963301295\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4170.797738535452\n",
+      "4160.59662541592\n",
+      "4140.903856189635\n",
+      "4190.344980081611\n",
+      "4192.252538993236\n",
+      "4163.061508984752\n",
+      "4164.380142796594\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4151.389092323363\n",
+      "4166.995279246002\n",
+      "4154.56173511522\n",
+      "4115.899405887119\n",
+      "4166.909243919552\n",
+      "4168.1852980332205\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5160.480344283765\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wax/opt/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:567: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warn(\"Maximum Likelihood optimization failed to converge. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6187.383848385564\n",
+      "4190.617624611008\n"
      ]
     }
    ],
